apps/jellyfin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    targetPort: 8096
    nodePort: 30096
    protocol: TCP
  - name: https
    port: 8920
    targetPort: 8920
    nodePort: 30920
    protocol: TCP
